#pragma once
#include "view_base.hpp"
namespace tysm {
class DialogView : public ViewBase {
public:
    void show();
};
} // namespace tysm
