#pragma once
#include "view_base.hpp"
namespace tysm {

class TitleView : public ViewBase {
public:
    TitleView(SDL_Renderer*& renderer);
};

} // namespace tysm
